thesis: General improvements

--- a/thesis/sections/checking.tex
+++ b/thesis/sections/checking.tex
@@ -20,6 +20,8 @@ How do we refine the model and/or properties on a verification failure?
 \subsubsection{Properties}
 \label{sec:props}
 
+% TODO: Explain syntax and assumptions of LTL properties
+
 In the summary of section \ref{sec:ifc-model} we mentioned that there are some arguments to the information flow semantic functions in $ \I $ that are not used to determine the information flow label of some architectural word.
 These induce the first properties we will verify the MINRV8 architecture against.
 
@@ -54,6 +56,7 @@ These only propagate information flow tracking labels by assigning the constant 
 We decided to model the labels of \glspl{csr} as constants because they control the state of the architecture and as such might be target of an attack.
 We labelled all \glspl{csr} as integrous and \gls{mstatus} as confidential.
 We decided to not label \gls{pmacfg} or \gls{pmpcfg} as confidential since it can be assumed that user mode must be able to know where memory regions are to operate correctly.
+% TODO: Phrase this better
 Our architecture does not support virtual addresses, address translation or other similar concepts which might hide details of the memory settings from user mode leaving it without the need to know the details of memory settings.
 
 Coming back to the information flow semantics of \rv{Csrrs} and \rv{Csrrc}, notice that in the respective definition of the semantical functions the value the \glspl{csr} are written with is not used.
